[gd_scene load_steps=6 format=2]

[ext_resource path="res://QuizRoom.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interface/buttons/green_button07.png" type="Texture" id=3]
[ext_resource path="res://interface/buttons/green_button08.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = 950.0
margin_bottom = 500.0

[node name="QuestionPanel" type="Label" parent="VBoxContainer"]
margin_right = 940.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.0941176, 0.0941176, 1 )
text = "Hello..."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 940.0
margin_bottom = 90.0

[node name="AnswerButton1" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Answer" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 53.0
margin_top = 6.0
margin_right = 156.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.0941176, 0.0941176, 1 )
text = "Hello..."

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 940.0
margin_bottom = 143.0

[node name="AnswerButton2" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Answer2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 53.0
margin_top = 6.0
margin_right = 156.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.0941176, 0.0941176, 1 )
text = "Hello..."

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 940.0
margin_bottom = 196.0

[node name="AnswerButton3" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Answer3" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 53.0
margin_top = 6.0
margin_right = 156.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.0941176, 0.0941176, 1 )
text = "Hello..."

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 940.0
margin_bottom = 249.0

[node name="AnswerButton4" type="TextureButton" parent="VBoxContainer/HBoxContainer4"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 53.0
margin_top = 6.0
margin_right = 280.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.6, 0.0941176, 0.0941176, 1 )
text = "None of Above"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AnswerButton1" to="." method="_on_AnswerButton1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AnswerButton2" to="." method="_on_AnswerButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/AnswerButton3" to="." method="_on_AnswerButton3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/AnswerButton4" to="." method="_on_AnswerButton4_pressed"]
